@@ -1,3 +1,12 @@
+2013-01-16  Alexey Proskuryakov  <ap@apple.com>
+
+        Update sandbox rules after r128003
+        https://bugs.webkit.org/show_bug.cgi?id=106840
+
+        Reviewed by Darin Adler.
+
+        * WebProcess/com.apple.WebProcess.sb.in: Additional Lion only fixes.
+
 2013-01-16  Sam Weinig  <sam@webkit.org>
 
         Make debug-safari --target-web-process work again
